--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,9 @@ header > nav > .mobile-header > .mobile-header-menu > a:not(:last-child) {
   position: absolute;
   left: 0;
   opacity: 0.07;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
 }
 .section__4 > .banner > .bg-desktop {
   display: none;
