--- a/scss/section/_section_4.scss
+++ b/scss/section/_section_4.scss
@@ -11,6 +11,9 @@
       position: absolute;
       left: 0;
       opacity: 0.07;
+      top: 0;
+      bottom: 0;
+      margin: auto 0;
     }
     > .bg-desktop {
       display: none;
