--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -118,6 +118,8 @@ footer {
       > .links_container {
         width: 380px;
         margin-top: 66px;
+        justify-content: space-between;
+        padding: 0 20px;
       }
 
       > .icons_container {
