--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -85,6 +85,7 @@ button {
   font-size: 12px;
   background-color: $brightRed;
   color: $veryPaleRed;
+  color: white;
   border-radius: 50px;
   box-shadow: 0px 8px 15px rgba(243, 95, 57, 41%);
 
